# ChangeLog for xfce-base/thunar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*thunar-0.9.93 (14 Jan 2009)

  14 Jan 2009; Christoph Mende <angelos@gentoo.org> +thunar-0.9.93.ebuild:
  Xfce-4.6 beta3

  18 Dec 2008; Christoph Mende <angelos@gentoo.org> thunar-0.9.92.ebuild,
  thunar-9999.ebuild:
  Added USE=doc

  10 Dec 2008; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Fixed exo dependency and removed unneeded MY_P

  17 Nov 2008; Christoph Mende <angelos@gentoo.org> thunar-0.9.92.ebuild,
  thunar-9999.ebuild:
  Moved XFCE_CONFIG to pkg_setup

*thunar-0.9.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org> +thunar-0.9.92.ebuild:
  Xfce-4.6 Beta 2 bump

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Remove USE=doc

  03 Dec 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Sync with the main tree

  30 Oct 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Removed librsvg dependency

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Cleanup

  29 Jun 2007; Christoph Mende <angelos@gentoo.org> thunar-9999.ebuild:
  Removed deprecated dependency on <dbus-1

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
