@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST Thunar-0.9.92.tar.bz2 6647836 RMD160 5b1e14232c16978b7a690069a7c350cdb7002041 SHA1 593abe4d4425fbc8faa6c7257f6f893d7ad92c77 SHA256 bd9930e8a6f3f6d41893e976d163d505a100e00431ed97059067de92cf7dc66f
 DIST Thunar-0.9.93.tar.bz2 7154829 RMD160 edb6d305af15556765a2da197a896c39e72cf96c SHA1 b136e5371dcec7616c5a270cf822d526d5fd77f1 SHA256 b01bdf66cedb84bf0dd0f56d20cae5c1acdb71eddec4e5b340e1f9607750fd37
+DIST Thunar-0.9.99.1.tar.bz2 7089165 RMD160 7260b2399274f2798967542c0d7d39ff09e047fd SHA1 b909637ff7f3d87ee0a78f5c1cbb5d3ffbb684e8 SHA256 1ced4815f10ea6ed0d57452477dd2d5957573504e89ed7dffba4eea7617f83ff
 EBUILD thunar-0.9.92.ebuild 1791 RMD160 3da5f6b388bec3169322c3c89e61e4289d07ebea SHA1 3f3d25d1c037df755ec4dd4a9d6cbf2d26cff8cc SHA256 61fc1283193db4187d482012df257bca65748ecee90953c6f7f6a15f373cc369
 EBUILD thunar-0.9.93.ebuild 1791 RMD160 d535f6d85312278c140edc75d660294f00fa79e9 SHA1 b47d02b544852dd8428fa861ba0b5f3c25065017 SHA256 1830bd5e752d1a7946f49ddefe1b4625bd58e11dbd3165aeca7ec1ec6a24f18e
+EBUILD thunar-0.9.99.1.ebuild 1793 RMD160 846504f3d91e897ec60b1ffce41a019262219b39 SHA1 5ecaa28908109076fef190a068ffeee657ead410 SHA256 8997b5b6fb3812b2b263831ca2249807cc1e22cb876c6a6b1ca62162e50566b5
 EBUILD thunar-9999.ebuild 1776 RMD160 8295cbd2177ec7c146ffd56a1dadbc56d2c29f00 SHA1 e3db68696dc54a06996601011c52979d5874b64f SHA256 1e8bfe566c1f1649313dcf9de2f13f74d6a410cbb00a06b921fbd0826e2c9da8
-MISC ChangeLog 1308 RMD160 48bdda3e17fce1675f14fbf0000f56ae57291078 SHA1 e501a1f16fa355f73fcf030d13471a9747006514 SHA256 5ccad528ab73b49a24a7a5fb2ac78ba950c47172ed5d352dc5e4ec89d07985e1
+MISC ChangeLog 1433 RMD160 b7ce837ed04a004feb33b5e1b78940dd59809525 SHA1 6559d6597a195fe033c0bee7303ffdf43722708a SHA256 d52915d48f102fad6e1d0c2f20eed9e7a8e8952e0b971cdf61c0ba19c16426d3
 MISC metadata.xml 234 RMD160 5cf371faf236f472c7d98a92d7103c5a96c4d95a SHA1 f028da2a6c812a70d5a6c159a450899a5c8f29a2 SHA256 acb3aa4d6a184bbefb0ae06cbb0ed0416ecd1b87d01cae543365cfc0e330d8cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa+AkACgp/v3JdT0qgU/V+4Q1959EtTU
-xvoAoPGt6PvUbzx8KsQnASGBlLPRIi9/
-=tXrA
+iEYEARECAAYFAkl9xZcACgkQKhnDs22gwa8mrACeMZuALUHsGwz7fjL2G7Gcp78J
+adsAoNTIzI28axND3CXhaTT/CveUH3xn
+=RWHK
 -----END PGP SIGNATURE-----
