@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*thunar-0.9.99.1 (26 Jan 2009)
+
+  26 Jan 2009; Christoph Mende <angelos@gentoo.org> +thunar-0.9.99.1.ebuild:
+  Xfce-4.6 RC1
+
 *thunar-0.9.93 (14 Jan 2009)
 
   14 Jan 2009; Christoph Mende <angelos@gentoo.org> +thunar-0.9.93.ebuild:
